--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             overflow-x: hidden;
             height: 100vh;
             background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
-                        url('images/background.svg') no-repeat center center fixed;
+                        url('images/background.png') no-repeat center fixed;
             background-size: cover;
             position: relative;
         }
@@ -151,7 +151,7 @@
             </a>
             <a href="https://play.google.com/store/apps/details?id=com.danilzosim.curso"
                target="_blank" class="app-button">
-                <img src="images/google-play-button.svg" alt="Get it on Google Play">
+                <img src="images/google-play-button.png" alt="Get it on Google Play">
             </a>
         </div>
     </div>
