--- a/transferdetails/BankTransfersKgtoRus.html
+++ b/transferdetails/BankTransfersKgtoRus.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Переводы OSON</title>
-  <meta name="description" content="Информация о переводах через OSON">
+  <title>Банковские переводы из Кыргызстана в Россию</title>
+  <meta name="description" content="Банковские переводы из Кыргызстана в Россию">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -63,15 +63,10 @@
 <body>
 <div class="content">
   <h2>Лимиты и комиссии</h2>
-  <div class="text">
-    <div class="text">Комиссия для переводов 1%.
-  <ul>
-    <li>Лимит на один перевод - 140 000 ₽</li>
-    <li>Лимит в день - 300 000 ₽</li>
-    <li>Лимит в месяц - 1 000 000 ₽</li>
-  </ul>
-    </div>
-</div>
+  <div class="text">Курс указан для конвертации сома в рубль. Курс взят с официального сайта банка и может отличаться от курса в приложении при совершении перевода.
+  </div>
+  <div class="text">Для перевода необходимо сделать перевод по реквизитам российского счёта из банковского приложения.</div>
+  <div class="text">Банк может запросить документ о происхождении средств.</div>
 </div>
 </body>
 </html>
