--- a/transferdetails/AlifMoby.html
+++ b/transferdetails/AlifMoby.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Переводы OSON</title>
-  <meta name="description" content="Информация о переводах через OSON">
+  <title>Переводы Alif moby</title>
+  <meta name="description" content="Информация о переводах через Alif moby">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -64,11 +64,11 @@
 <div class="content">
   <h2>Лимиты и комиссии</h2>
   <div class="text">
-    <div class="text">Комиссия для переводов 1%.
+    <div class="text">Комиссия для переводов 0%
   <ul>
-    <li>Лимит на один перевод - 140 000 ₽</li>
-    <li>Лимит в день - 300 000 ₽</li>
-    <li>Лимит в месяц - 1 000 000 ₽</li>
+    <li>Лимит в день - 5000 $</li>
+    <li>В неделю - 10 000 $</li>
+    <li>В месяц - 20 000 $</li>
   </ul>
     </div>
 </div>
