--- a/transferdetails/MTSandMultitransfer.html
+++ b/transferdetails/MTSandMultitransfer.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Переводы KwikPay</title>
-  <meta name="description" content="Информация о переводах через KwikPay">
+  <title>Переводы Multitransfer</title>
+  <meta name="description" content="Информация о переводах через Multitransfer">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -63,31 +63,21 @@
 <body>
 <div class="content">
   <h2>Лимиты и комиссии</h2>
-  <div class="text">Комиссия - 0%, <br>
-    кроме получения переводов в рублях в Армении</div>
   <br>
-  <div class="text">
-    <div class="text">Для переводов в Узбекистан:
-  <ul>
-    <li>За одну операцию по номеру телефона - не более 9 000 000 uzs </li>
-    <li>За одну операцию по номеру карты - не более 16 499 988 uzs</li>
-  </ul>
-      <br>
-    </div>
-    <div class="text">Для переводов в Казахстан:
+  <br>
+  <div class="text">Без комиссии</div>
+  <div class="text">При прохождении идентификации:
     <ul>
-      <li>За одну операцию - не более 500 000 kzt</li>
-    </ul>
-    </div>
-    <br>
-  </div>
-  <div class="text">Для переводов в Турцию:
-    <ul>
-      <li>За одну операцию - не более 90 000 try</li>
+      <li>За один перевод - 600 000 ₽</li>
+      <li>В месяц 1 200 000 ₽</li>
     </ul>
   </div>
-  <div class="text">В день - не более 450 000 ₽ всего, не более 3 переводов с одной карты<br>
-    В месяц - не более 700 000 ₽ всего, не более 10 переводов с одной карты</div>
+  <div class="text">Без идентификации:
+    <ul>
+      <li>За один перевод - 60 000 ₽</li>
+      <li>В месяц 200 000 ₽</li>
+    </ul>
+  </div>
 </div>
 </body>
 </html>
