--- a/transferdetails/BankMirPrivelegiyToKg.html
+++ b/transferdetails/BankMirPrivelegiyToKg.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Переводы Банк «Мир Привелегий»</title>
-  <meta name="description" content="Информация о переводах через Банк «Мир Привелегий»>
+  <meta name="description" content="Информация о переводах через Банк «Мир Привелегий»">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -66,13 +66,13 @@
   <div class="text">
     <div class="text">Минимальная сумма перевода - 5000 рублей.
       <ul>
-    <li>Лимит в день - 450 000 ₽</li>
-    <li>В месяц - 600 000 ₽</li>
-    <li>Минимальная сумма перевода - 5000 рублей.</li>
-  </ul>
+        <li>Лимит в день - 450 000 ₽</li>
+        <li>В месяц - 600 000 ₽</li>
+        <li>Минимальная сумма перевода - 5000 рублей.</li>
+      </ul>
     </div>
     <div class="text">Только на карты Элкарт.</div>
-</div>
+  </div>
 </div>
 </body>
 </html>
