--- a/transferdetails/BankMirPrivelegiyToTj.html
+++ b/transferdetails/BankMirPrivelegiyToTj.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Переводы Sendy</title>
-  <meta name="description" content="Информация о переводах через Sendy">
+  <title>Переводы «Мир Привелегий»</title>
+  <meta name="description" content="Информация о переводах через «Мир Привелегий»">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
