--- a/transferdetails/BankMirPrivelegiyToKg.html
+++ b/transferdetails/BankMirPrivelegiyToKg.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Переводы Банк «Мир Привелегий»</title>
-  <meta name="description" content="Информация о переводах через Банк «Мир Привелегий»">
+  <title>Переводы «Мир Привелегий»</title>
+  <meta name="description" content="Информация о переводах через «Мир Привелегий»">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -71,7 +71,7 @@
         <li>Минимальная сумма перевода - 5000 рублей.</li>
       </ul>
     </div>
-    <div class="text">Только на карты Элкарт.</div>
+    <div class="text">Только на карты Элкарт</div>
   </div>
 </div>
 </body>
