--- a/transferdetails/AkaPay.html
+++ b/transferdetails/AkaPay.html
@@ -66,8 +66,8 @@
   <div class="text">Приложение доступно только для телефонов на базе Android.</div>
   <div class="text">Промокод - <b>CursoUz</b></div>
   <div class="text">Без комиссии со стороны сервиса.</b></div>
-  <div class="text">Лимит в месяц - не более $5000.</b></div>
-  <div class="text">Для получения перевода необходимо обратиться в банк-партнёр.</div>
+  <div class="text">Лимит за 30 календарных дней - $5000.</b></div>
+  <div class="text">Для получения перевода необходимо обратиться в банк-партнёр Asia Express.</div>
 </div>
 </body>
 </html>
