--- a/transferdetails/AvosendRuUz.html
+++ b/transferdetails/AvosendRuUz.html
@@ -69,12 +69,12 @@
   <div class="text">Комиссия - 19 RUB</div>
   <div class="text">Лимиты переводов из России:
     <ul>
-      <li>За один перевод - не более 200 000 ₽</li>
-      <li>За день - не более 400 000 ₽, не более 5 переводов</li>
-      <li>В месяц - не более 900 000 ₽</li>
+      <li>За один перевод - 200 000 ₽</li>
+      <li>За день - 400 000 ₽, не более 5 переводов</li>
+      <li>В месяц - 780 000 ₽, не более 30 переводов на карты</li>
     </ul>
   </div>
-  <div class="text">Лимиты на зачисление в Кыргызстане на одну карту от всех получателей.:
+  <div class="text">Лимиты на зачисление в Узбекистане на одну карту от всех получателей.:
     <ul>
       <li>За один перевод - 16 499 988 UZS</li>
       <li>В день - 16 499 988 UZS</li>
