--- a/transferdetails/AvosendUzRu.html
+++ b/transferdetails/AvosendUzRu.html
@@ -74,7 +74,7 @@
       <li>В месяц - 100 000 000 UZS</li>
     </ul>
   </div>
-  <div class="text">Лимиты зачисления на одну карту:
+  <div class="text">Лимиты зачисления на одну карту от всех отправителей:
     <ul>
       <li>В день - 400 000 ₽, не более 5 переводов</li>
       <li>В месяц - 800 000 ₽</li>
