--- a/transferdetails/AvosendOther.html
+++ b/transferdetails/AvosendOther.html
@@ -69,9 +69,9 @@
   <div class="text">Комиссия - 49 RUB</div>
   <div class="text">Лимиты:
     <ul>
-      <li>За один перевод - не более 200 000 ₽</li>
-      <li>За день - не более 400 000 ₽, не более 5 переводов</li>
-      <li>В месяц - не более 900 000 ₽</li>
+      <li>За один перевод - 200 000 ₽</li>
+      <li>За день - 400 000 ₽, не более 5 переводов</li>
+      <li>В месяц - 780 000 ₽, не более 30 переводов на карты</li>
     </ul>
   </div>
 </div>
