--- a/transferdetails/AvosendRuKg.html
+++ b/transferdetails/AvosendRuKg.html
@@ -69,9 +69,9 @@
   <div class="text">Комиссия - 49 RUB</div>
   <div class="text">Лимиты переводов из России:
     <ul>
-      <li>За один перевод - не более 200 000 ₽</li>
-      <li>За день - не более 400 000 ₽, не более 5 переводов</li>
-      <li>В месяц - не более 900 000 ₽</li>
+      <li>За один перевод - 200 000 ₽</li>
+      <li>За день - 400 000 ₽, не более 5 переводов</li>
+      <li>В месяц - 780 000 ₽, не более 30 переводов на карты</li>
     </ul>
   </div>
   <div class="text">Лимиты на зачисление в Кыргызстане на одну карту от всех получателей.:
@@ -80,6 +80,7 @@
       <li>5 переводов в день</li>
       <li>150 000 KGS в день</li>
       <li>Максимальная сумма одного перевода - 50 000 KGS</li>
+      <li>100 000 KGS в день на один счет получателя со всех отправителей</li>
     </ul>
   </div>
   <div class="text">При переводе от 45 000₽ в месяц курс будет улучшен.</div>
