--- a/transferdetails/BTBExpress.html
+++ b/transferdetails/BTBExpress.html
@@ -71,7 +71,7 @@
     <ul>
       <li>Один перевод - 70 000 ₽.</li>
       <li>В день - 300 000 ₽, не более 8 переводов</li>
-      <li>В месяц - не более 500 000 ₽.</li>
+      <li>В месяц - 500 000 ₽.</li>
     </ul>
   </div>
   <div class="text">Не более 20 операций за 4 дня.</div>
