--- a/transferdetails/GazprombankKg.html
+++ b/transferdetails/GazprombankKg.html
@@ -65,7 +65,7 @@
   <h2>Лимиты и комиссии</h2>
   <div class="text">Курс указан для перевода на Mobile Wallet (карты Бакай Банка)</div>
   <ul>
-    <li>Кыргызстан 0%</li>
+    <li>Без комиссии</li>
   </ul>
   <div class="text">Лимиты на переводы</div>
     <ul>
