--- a/transferdetails/MTSandMultitransfer.html
+++ b/transferdetails/MTSandMultitransfer.html
@@ -66,18 +66,11 @@
   <br>
   <br>
   <div class="text">Без комиссии</div>
-  <div class="text">При прохождении идентификации:
     <ul>
-      <li>За один перевод - 600 000 ₽</li>
-      <li>В месяц 1 200 000 ₽</li>
+      <li>За один перевод - 800 000 ₽</li>
+      <li>В месяц - 1 000 000 ₽</li>
     </ul>
-  </div>
-  <div class="text">Без идентификации:
-    <ul>
-      <li>За один перевод - 60 000 ₽</li>
-      <li>В месяц 200 000 ₽</li>
-    </ul>
-  </div>
+
 </div>
 </body>
 </html>
