--- a/transferdetails/MilliyPay.html
+++ b/transferdetails/MilliyPay.html
@@ -66,16 +66,15 @@
   <div class="text">
     <div class="text">Комиссии:
   <ul>
-    <li>1.2% при переводе от 4333₽</li>
-    <li>46₽ при переводе от 901₽ до 4333₽</li>
+    <li>1.4% при переводе от 1000₽</li>
   </ul>
       <br>
     </div>
     <div class="text">Лимиты:
     <ul>
-      <li>За один перевод - не более 36 000₽</li>
-      <li>В сутки - не более 60 000₽, не более 5 переводов</li>
-      <li>В календарный месяц - не более 60 000₽, не более 30 переводов</li>
+      <li>За один перевод - от 1000₽ до 60 000₽</li>
+      <li>В сутки не более 5 переводов</li>
+      <li>В календарный месяц - не более 600 000₽, не более 30 переводов</li>
     </ul>
     </div>
 </div>
