--- a/transferdetails/SberbankKg.html
+++ b/transferdetails/SberbankKg.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Переводы Sendy</title>
-  <meta name="description" content="Информация о переводах через Sendy">
+  <title>Переводы Сбербанк</title>
+  <meta name="description" content="Информация о переводах через Сбербанк">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -64,12 +64,20 @@
 <div class="content">
   <h2>Лимиты и комиссии</h2>
   <div class="text">
-    <div class="text">Без комиссии.
-  <ul>
-    <li>В сутки - 300 000₽, не более 5 переводов</li>
-    <li>В календарный месяц - 600 000₽, не более 10 переводов</li>
-  </ul>
+    <div class="text">По номеру карты:
+      <ul>
+        <li>Без комиссии</li>
+        <li>В сутки - 500 000₽</li>
+        <li>В месяц - 3 000 000₽</li>
+      </ul>
     </div>
+    <div class="text">Для клиентов СберПервого и Private Banking:
+      <ul>
+        <li>В сутки - 1 000 000₽</li>
+        <li>В месяц - 30 000 000₽</li>
+      </ul>
+    </div>
+</div>
 </div>
 </body>
 </html>
