--- a/transferdetails/Tezpay.html
+++ b/transferdetails/Tezpay.html
@@ -73,9 +73,9 @@
     </div>
     <div class="text">Лимиты:
     <ul>
-      <li>За один перевод - не более 36 000₽</li>
-      <li>В сутки - не более 60 000₽, не более 5 переводов</li>
-      <li>В календарный месяц - не более 60 000₽, не более 30 переводов</li>
+      <li>За один перевод - не более 100 000₽</li>
+      <li>В сутки не более 10 переводов</li>
+      <li>В календарный месяц - более 1 000 000₽в</li>
     </ul>
     </div>
 </div>
