--- a/transferdetails/Unired.html
+++ b/transferdetails/Unired.html
@@ -66,8 +66,7 @@
   <div class="text">
     <div class="text">Без комиссии
   <ul>
-    <li>За один перевод - 100 000 ₽</li>
-    <li>За день - 145 000 000 сўм</li>
+    <li>За один перевод - от 1000 до 100 000 ₽</li>
   </ul>
     </div>
 </div>
