--- a/transferdetails/KoronaPayKg.html
+++ b/transferdetails/KoronaPayKg.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Переводы Sendy</title>
-  <meta name="description" content="Информация о переводах через Sendy">
+  <title>KoronaPay</title>
+  <meta name="description" content="Информация о курсах KoronaPay">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -63,13 +63,8 @@
 <body>
 <div class="content">
   <h2>Лимиты и комиссии</h2>
-  <div class="text">
-    <div class="text">Без комиссии.
-  <ul>
-    <li>В сутки - 300 000₽, не более 5 переводов</li>
-    <li>В календарный месяц - 600 000₽, не более 10 переводов</li>
-  </ul>
-    </div>
+  <div class="text">При переводе на Элкарт без комиссии.</div>
+  <div class="text">Лимит в течение последних 30 дней - $10 000, 15 переводов в месяц</div>
 </div>
 </body>
 </html>
