--- a/transferdetails/TBank.html
+++ b/transferdetails/TBank.html
@@ -63,12 +63,18 @@
 <body>
 <div class="content">
   <h2>Лимиты и комиссии</h2>
-  <div class="text">Комиссия при отсутствии подписки - 1% на суммы свыше 20 000 ₽ в месяц</div>
+  <div class="text">Комиссия 1,5% после превышения порога
+    <ul>
+      <li>20 000₽ без подписки</li>
+      <li>50 000₽ с подпиской Pro</li>
+      <li>100 000₽ с подпиской Premium</li>
+    </ul>
+  </div>
   <div class="text">Лимиты
     <ul>
-    <li>Одна операция - не более 150 000 ₽.</li>
-    <li>В день - не более эквивалента 5 000$, не более 20 переводов в сутки. </li>
-    <li>В месяц - не более 1 500 000 ₽. </li>
+    <li>Одна операция - 1 000 000 ₽.</li>
+    <li>В день - не более 30 переводов. </li>
+    <li>В месяц - 5 000 000 ₽. </li>
     </ul>
   </div>
 </div>
