--- a/transferdetails/Unired.html
+++ b/transferdetails/Unired.html
@@ -69,6 +69,7 @@
     <li>За один перевод - от 1000 до 100 000 ₽</li>
   </ul>
     </div>
+    <div class="text">Курс переводов может отличаться для новых аккаунтов</div>
 </div>
 </div>
 </body>
