--- a/transferdetails/UnistreamToKyrgyzstan.html
+++ b/transferdetails/UnistreamToKyrgyzstan.html
@@ -73,9 +73,8 @@
     </div>
     <div class="text">Лимиты:
     <ul>
-      <li>Один перевод - не более 100 000₽</li>
-      <li>В сутки - не более 450 000₽</li>
-      <li>В календарный месяц - не более 400 000₽</li>
+      <li>В сутки - 450 000₽</li>
+      <li>В календарный месяц - 700 000₽</li>
     </ul>
     </div>
 </div>
