--- a/transferdetails/KiCB.html
+++ b/transferdetails/KiCB.html
@@ -67,10 +67,10 @@
     <div class="text">Удостоверьтесь, что у вас отрыт рублёвый счёт в банке.</div>
     <div class="text">Для отправки необходимо в приложении вашего российского банка отправить перевод по реквизитам:
       <ul>
-    <li>БИК <b>044 525 545</b></li>
-    <li>ИНН <b>771 003 0411</b></li>
-    <li>Счёт получателя <b>301 118 105 000 132 313 01</b></li>
-    <li>Получатель <b>ЗАО "Кыргызский Инвестиционно-Кредитный Банк"</b> (некоторые банки могут требовать указать название банка-корреспондента АО «ЮниКредит Банк»)</li>
+    <li>БИК <b>044 525 502</b></li>
+    <li>ИНН <b>774 400 1828</b></li>
+    <li>Счёт получателя <b>301 018 100 000 000 005 02</b></li>
+    <li>Получатель <b>ЗАО "Кыргызский Инвестиционно-Кредитный Банк"</b> (некоторые банки могут требовать указать название банка-корреспондента ООО "МБА-МОСКВА")</li>
     <li>Назначение платежа <b>Кыргызский Инвестиционно-Кредитный Банк. Получатель: (Ф.И.О. получателя), счёт № (рублёвый счёт). Перевод собственных средств. НДС не облагается.</b></li>
   </ul>
     </div>
