--- a/transferdetails/MBank.html
+++ b/transferdetails/MBank.html
@@ -70,8 +70,8 @@
     <li>БИК <b>044525502</b></li>
     <li>ИНН <b>774 400 1828</b></li>
     <li>Счёт получателя <b>301 118 105 000 000 032 57</b></li>
-    <li>Получатель <b>ОАО "Коммерческий банк Кыргызстан"</b> (некоторые банки могут требовать указать название банка-корреспондента Банк «МБА-Москва»)</li>
-    <li>Назначение платежа <b>Коммерческий банк Кыргызстан. Получатель: (Ф.И.О. получателя), счёт № (рублёвый счёт). Перевод собственных средств. НДС не облагается.</b></li>
+    <li>Получатель <b>ОАО "МБанк"</b> (некоторые банки могут требовать указать название банка-корреспондента Банк «МБА-Москва»)</li>
+    <li>Назначение платежа <b>ОАО "МБанк". Получатель: (Ф.И.О. получателя), счёт № (рублёвый счёт). Перевод собственных средств. НДС не облагается.</b></li>
   </ul>
     </div>
     <div class="text">Перевод занимает не менее 1 рабочего дня.</div>
