--- a/transferdetails/DemirBank.html
+++ b/transferdetails/DemirBank.html
@@ -63,6 +63,7 @@
 <body>
 <div class="content">
   <div class="text">
+    <div class="text">Уточните реквизиты у поддержки перед отправкой перевода.</div>
     <div class="text">Курс указан для конвертации рубля в сом. Курс взят с официального сайта банка и может отличаться от курса в приложении при совершении перевода.</div>
     <div class="text">Удостоверьтесь, что у вас отрыт рублёвый счёт в банке.</div>
     <div class="text">Для отправки необходимо в приложении вашего российского банка отправить перевод по реквизитам:
