--- a/transferdetails/VtbRuToKg.html
+++ b/transferdetails/VtbRuToKg.html
@@ -63,31 +63,39 @@
 <body>
 <div class="content">
   <h2>Лимиты и комиссии</h2>
-  <div class="text">Для переводов с получанием наличными - 1.5%<br>
-    Для остальных переводов - 0.5%, минимум 50₽</div>
-  <br>
   <div class="text">
     <div class="text">Перевод по номеру карты:
-  <ul>
-    <li>не более 350 000₽ за перевод, </li>
-    <li>не более 500 000₽ в месяц</li>
-  </ul>
+      <div>Комиссия 0,5%, минимум 50₽</div>
+      <ul>
+        <li>Один перевод - 350 000₽</li>
+        <li>В день - 350 000₽</li>
+        <li>В месяц - 500 000₽</li>
+        <li>В сутки с подключенным "Прайм+" - 800 000₽</li>
+        <li>В сутки с подключенным "Привилегия" - 500 000₽</li>
+        <li>В сутки с подключенным "Прайм+" - 9 000 000₽</li>
+        <li>В сутки с подключенным "Привилегия" - 4 000 000₽</li>
+      </ul>
       <br>
     </div>
     <div class="text">Перевод по номеру телефона:
-    <ul>
-      <li>не более 300 000₽ за перевод,</li>
-      <li>не более 1 000 000₽ в месяц</li>
+      <div>Без комисиии</div>
+      <ul>
+      <li>Один перевод - 300 000₽</li>
+      <li>В день - 1 000 000₽</li>
+      <li>В месяц - 1 000 000₽</li>
+      <li>В месяц с подключенным "Прайм+" или "Привилегия" - 5 000 000₽</li>
     </ul>
     </div>
     <br>
   </div>
   <div class="text">Перевод наличными:
+    <div>Комиссия 1,5%, минимум 100₽</div>
     <ul>
-      <li>не более 350 000₽ за перевод,</li>
-      <li>не более 500 000₽ в месяц</li>
+      <li>Один перевод - 350 000₽</li>
+      <li>В день - 350 000₽</li>
+      <li>В месяц - 500 000₽</li>
     </ul>
-  </div>
+</div>
 </div>
 </body>
 </html>
