--- a/transferdetails/VtbRuToKg.html
+++ b/transferdetails/VtbRuToKg.html
@@ -63,6 +63,7 @@
 <body>
 <div class="content">
   <h2>Лимиты и комиссии</h2>
+  <div class="text">Курс указан для перевода на Mobile Wallet (карты Бакай Банка)</div>
   <div class="text">
     <div class="text">Перевод по номеру карты:
       <div>Комиссия 0,5%, минимум 50₽</div>
