--- a/transferdetails/SalamPayAzUsd.html
+++ b/transferdetails/SalamPayAzUsd.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AkaPay</title>
-  <meta name="description" content="Информация о курсах AkaPay">
+  <title>Переводы SalamPay</title>
+  <meta name="description" content="Информация о переводах через SalamPay">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -63,11 +63,16 @@
 <body>
 <div class="content">
   <h2>Лимиты и комиссии</h2>
-  <div class="text">Приложение доступно только для телефонов на базе Android.</div>
-  <div class="text">Промокод - <b>CursoUz</b></div>
-  <div class="text">Без комиссии со стороны сервиса.</b></div>
-  <div class="text">Лимит за 30 календарных дней - $5000.</b></div>
-  <div class="text">Для получения перевода наличными необходимо обратиться в банк-партнёр Asia Express.</div>
+  <div class="text">
+    <div class="text">Без комиссии
+  <ul>
+    <li>За перевод - 717$</li>
+    <li>В день - 100 000 ₽ в сумме, не более 5 переводов.</li>
+    <li>В месяц - 150 000₽ в сумме, не более 15 переводов.</li>
+  </ul>
+    </div>
+</div>
+  <div class="text">Получение в пунктах выдачи Granat<div>
 </div>
 </body>
 </html>
