--- a/transferdetails/GazprombankKgCard.html
+++ b/transferdetails/GazprombankKgCard.html
@@ -63,7 +63,7 @@
 <body>
 <div class="content">
   <h2>Лимиты и комиссии</h2>
-  <div class="text">Курс указан для перевода по номеру телефона на Mobile Wallet (карты Бакай Банка)</div>
+  <div class="text">Курс указан для перевода по номеру карты на VISA МБанк</div>
   <ul>
     <li>Без комиссии</li>
   </ul>
