--- a/transferdetails/KwikPayAm.html
+++ b/transferdetails/KwikPayAm.html
@@ -63,13 +63,11 @@
 <body>
 <div class="content">
   <h2>Лимиты и комиссии</h2>
-  <div class="text">
-    <div class="text">Без комиссии
-  <ul>
-    <li>За одну операцию по номеру телефона - не более 9 000 000 uzs </li>
-    <li>За одну операцию по номеру карты - не более 16 499 988 uzs</li>
-  </ul>
-    </div>
+  <div class="text">Курс указан для получения перевода наличными</div>
+  <div class="text">Комиссия - 0%</div>
+  <div class="text">От 1000 до 1 750 000 драм</div>
+  <div class="text">В день - не более 450 000 ₽ всего, не более 3 переводов с одной карты<br>
+    В месяц - не более 700 000 ₽ всего, не более 10 переводов с одной карты</div>
 </div>
 </body>
 </html>
