--- a/transferdetails/DengiRu.html
+++ b/transferdetails/DengiRu.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Переводы Yoomoney</title>
-  <meta name="description" content="Информация о переводах через Yoomoney в Россию">
+  <title>Переводы Деньги.Ру</title>
+  <meta name="description" content="Информация о переводах через Avosend">
   <style>
     body {
         font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
@@ -62,19 +62,16 @@
 </head>
 <body>
 <div class="content">
-  <div class="text">
-    <div class="text">Курс указан для пополнения кошелька с иностранной карты Visa</div>
-    <div class="text">После пополнения кошелька возможен перевод на карты МИР и оплата Российских сервисов</div>
-    <div class="text">Лимиты для одной операции зависят от уровня идентификации:
-      <ul>
-        <li>Анонимный кошелек - до 15 000₽</li>
-        <li>Именной для граждан РФ - до 100 000₽></li>
-        <li>В день - до 100 000₽></li>
-        <li>В месяц - до 600 000₽</li>
-      </ul>
-      <div class="text">Перевод на карту МИР - комиссия 3% + 45₽</div>
-    </div>
-</div>
+  <h2>Переводы только на карту МБАНК</h2>
+  <br>
+  <div class="text">Без комисии</div>
+  <br>
+  <div class="text">Лимиты:
+    <ul>
+      <li>За один перевод - $5000</li>
+      <li>В месяц - $10 000</li>
+    </ul>
+  </div>
 </div>
 </body>
 </html>
