--- a/transferdetails/MilliyPay.html
+++ b/transferdetails/MilliyPay.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 <div class="content">
-  <h2>Лимиты и комиссии</h2>
+  <h2>ПЕРЕВОДЫ ДОСТУПНЫ ТОЛЬКО ГРАЖДАНАМ УЗБЕКИСТАНА</h2>
   <div class="text">
     <div class="text">Комиссии:
   <ul>
