--- a/transferdetails/Tezpay.html
+++ b/transferdetails/Tezpay.html
@@ -62,7 +62,7 @@
 </head>
 <body>
 <div class="content">
-  <h2>Лимиты и комиссии</h2>
+  <h2>ПЕРЕВОД ВОЗМОЖЕН НА ЛЮБУЮ VISA ПРИ НАЛИЧИИ ПИНФЛ</h2>
   <div class="text">
     <div class="text">Комиссии:
   <ul>
