--- a/transferdetails/AppExchange.html
+++ b/transferdetails/AppExchange.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>AkaPay</title>
+  <title>Перевод по реквизитам</title>
   <meta name="description" content="Информация о курсах через конверсию">
   <style>
     body {
