--- a/transferdetails/Unired.html
+++ b/transferdetails/Unired.html
@@ -62,6 +62,7 @@
 </head>
 <body>
 <div class="content">
+  <h2>Курс переводов отличается для новых пользователей</h2>
   <h2>Лимиты и комиссии</h2>
   <div class="text">
     <div class="text">Без комиссии
@@ -69,7 +70,6 @@
     <li>За один перевод - от 1000 до 100 000 ₽</li>
   </ul>
     </div>
-    <div class="text">Курс переводов может отличаться для новых аккаунтов</div>
 </div>
 </div>
 </body>
