--- a/transferdetails/Ayil Bank643417App Exchange.html
+++ b/transferdetails/Ayil Bank643417App Exchange.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Переводы Айыл банк</title>
+<title>Обмен валюты в приложении Айыл банк</title>
 <meta content="Meta Content" name="description"/>
 <style>
     :root {
@@ -132,16 +132,16 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Переводы Айыл банк" property="og:title"/><meta content="В день/месяц 1 000 000 сомов • Без комиссии" property="og:description"/><meta content="https://ab.kg/" property="og:url"/><link href="https://ab.kg/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Обмен валюты в приложении Айыл банк" property="og:title"/><meta content="Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении" property="og:description"/><meta content="https://ab.kg/" property="og:url"/><link href="https://ab.kg/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
-<h2>Переводы Айыл банк</h2>
+<h2>Обмен валюты в приложении Айыл банк</h2>
 
-<h2>Лимиты</h2>
-<div class="text">В день/месяц 1 000 000 сомов</div>
-<h2>Комиссии</h2>
-<div class="text">Без комиссии</div>
 
+
+
+
+<div class="text">Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении</div>
 <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://ab.kg/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/kg/app/abank/id6738693679" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=com.aiylbank.abank" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
