--- a/transferdetails/Bakai Bank417643App Exchange.html
+++ b/transferdetails/Bakai Bank417643App Exchange.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Переводы Бакай Банк</title>
+<title>Обмен валюты в приложении Бакай банк</title>
 <meta content="Meta Content" name="description"/>
 <style>
     :root {
@@ -132,16 +132,16 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Переводы Бакай Банк" property="og:title"/><meta content='Без комиссии • Курс указан для перевода на карту "Мир" через Mobile Wallet' property="og:description"/><meta content="https://www.bakai.kg/" property="og:url"/><link href="https://www.bakai.kg/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Обмен валюты в приложении Бакай банк" property="og:title"/><meta content="Без комиссии • Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении" property="og:description"/><meta content="https://www.bakai.kg/" property="og:url"/><link href="https://www.bakai.kg/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
-<h2>Переводы Бакай Банк</h2>
+<h2>Обмен валюты в приложении Бакай банк</h2>
 
 
 
 <h2>Комиссии</h2>
 <div class="text">Без комиссии</div>
-<div class="text">Курс указан для перевода на карту "Мир" через Mobile Wallet</div>
+<div class="text">Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении</div>
 <div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://www.bakai.kg/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/ru/app/bakai-%D0%BC%D0%BE%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D1%8B%D0%B9-%D0%B1%D0%B0%D0%BD%D0%BA/id1294108123" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=kg.bta.mobilebank2" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
