--- a/transferdetails/KoronaPay643944To card.html
+++ b/transferdetails/KoronaPay643944To card.html
@@ -132,17 +132,17 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Переводы KoronaPay" property="og:title"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Переводы KoronaPay" property="og:title"/><meta content="$10 000 в течении 30 календарных дней" property="og:description"/><meta content="https://koronapay.com/" property="og:url"/><link href="https://koronapay.com/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
 <h2>Переводы KoronaPay</h2>
 
+<h2>Лимиты</h2>
+<div class="text">$10 000 в течении 30 календарных дней</div>
 
 
 
-
-
-<div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/ru/app/korona/id1117334497" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=ru.tsk.ftc.bender.qpay" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
+<div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://koronapay.com/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/ru/app/korona/id1117334497" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=ru.tsk.ftc.bender.qpay" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
 <a href="https://t.me/CursoExchangeRatesBot" rel="noopener" target="_blank">Телеграм-бот</a>
