--- a/transferdetails/Tinkoff643398840To card.html
+++ b/transferdetails/Tinkoff643398840To card.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Обмен валюты в приложении Айыл банк</title>
+<title>Переводы в Тинькофф Банк</title>
 <meta content="Meta Content" name="description"/>
 <style>
     :root {
@@ -132,17 +132,17 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Обмен валюты в приложении Айыл банк" property="og:title"/><meta content="Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении" property="og:description"/><meta content="https://ab.kg/" property="og:url"/><link href="https://ab.kg/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Переводы в Тинькофф Банк" property="og:title"/><meta content="В сутки - не более 1 000 000₽, 30 переводов В месяц - не более 5 000 000₽ • Без комиссии в пределах лимита по тарифу: 20 000₽ без подписки 50 000₽ с Pro 100 000₽ с Premium При превышении лимита - 1%, " property="og:description"/><meta content="https://www.tbank.ru/" property="og:url"/><link href="https://www.tbank.ru/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
-<h2>Обмен валюты в приложении Айыл банк</h2>
+<h2>Переводы в Тинькофф Банк</h2>
 
+<h2>Лимиты</h2>
+<div class="text"><span>В сутки - не более 1 000 000₽, 30 переводов<br/>В месяц - не более 5 000 000₽</span></div>
+<h2>Комиссии</h2>
+<div class="text"><span>Без комиссии в пределах лимита по тарифу:<br/>20 000₽ без подписки<br/>50 000₽ с Pro<br/>100 000₽ с Premium<br/><br/>При превышении лимита - 1%, не менее 30₽</span></div>
 
-
-
-
-<div class="text">Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении</div>
-<div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://ab.kg/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/kg/app/abank/id6738693679" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=com.aiylbank.abank" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
+<div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://www.tbank.ru/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="RuStore" class="icon-link" href="https://www.rustore.ru/catalog/app/com.idamob.tinkoff.android" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/rustore.png"/></a></div>
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
 <a href="https://t.me/CursoExchangeRatesBot" rel="noopener" target="_blank">Телеграм-бот</a>
