--- a/transferdetails/Paysend860981840To card.html
+++ b/transferdetails/Paysend860981840To card.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Обмен валюты в приложении Айыл банк</title>
+<title>Переводы Paysend</title>
 <meta content="Meta Content" name="description"/>
 <style>
     :root {
@@ -132,17 +132,17 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Обмен валюты в приложении Айыл банк" property="og:title"/><meta content="Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении" property="og:description"/><meta content="https://ab.kg/" property="og:url"/><link href="https://ab.kg/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Переводы Paysend" property="og:title"/><meta content="100 000 000 UZS в месяц • 4999 UZS" property="og:description"/><meta content="https://paysend.com/" property="og:url"/><link href="https://paysend.com/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
-<h2>Обмен валюты в приложении Айыл банк</h2>
+<h2>Переводы Paysend</h2>
 
+<h2>Лимиты</h2>
+<div class="text">100 000 000 UZS в месяц</div>
+<h2>Комиссии</h2>
+<div class="text">4999 UZS</div>
 
-
-
-
-<div class="text">Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении</div>
-<div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://ab.kg/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/kg/app/abank/id6738693679" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=com.aiylbank.abank" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
+<div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://paysend.com/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/ru/app/%D0%B4%D0%B5%D0%BD%D0%B5%D0%B6%D0%BD%D1%8B%D0%B5-%D0%BF%D0%B5%D1%80%D0%B5%D0%B2%D0%BE%D0%B4%D1%8B-%D1%81-paysend/id1140130413" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=com.paysend.app" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
 <a href="https://t.me/CursoExchangeRatesBot" rel="noopener" target="_blank">Телеграм-бот</a>
