--- a/transferdetails/Unired643981840To card.html
+++ b/transferdetails/Unired643981840To card.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-<title>Обмен валюты в приложении Айыл банк</title>
+<title>Переводы Unired</title>
 <meta content="Meta Content" name="description"/>
 <style>
     :root {
@@ -132,17 +132,17 @@
   background: var(--surface-hover);
 }
   </style>
-<meta content="article" property="og:type"/><meta content="Обмен валюты в приложении Айыл банк" property="og:title"/><meta content="Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении" property="og:description"/><meta content="https://ab.kg/" property="og:url"/><link href="https://ab.kg/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
+<meta content="article" property="og:type"/><meta content="Переводы Unired" property="og:title"/><meta content='Официальные лимиты на сайте не соотвествуют фактическим. В качествен ориентира рекомендуем использовать На один перевод $1000 В день 300 000₽, включая "отмененные" переводы • Без комиссии • Для перево' property="og:description"/><meta content="https://unired.uz/" property="og:url"/><link href="https://unired.uz/" rel="canonical"/><meta content="summary" name="twitter:card"/></head>
 <body>
 <article><div class="content">
-<h2>Обмен валюты в приложении Айыл банк</h2>
+<h2>Переводы Unired</h2>
 
-
-
-
-
-<div class="text">Курс указан при переводе рублей на счет по реквизитам и конвертации в мобильном приложении</div>
-<div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://ab.kg/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a><a aria-label="App Store" class="icon-link" href="https://apps.apple.com/kg/app/abank/id6738693679" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/App_Store.svg"/></a><a aria-label="Google Play" class="icon-link" href="https://play.google.com/store/apps/details?id=com.aiylbank.abank" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/Google_Play.png"/></a></div>
+<h2>Лимиты</h2>
+<div class="text"><span>Официальные лимиты на сайте не соотвествуют фактическим. В качествен ориентира рекомендуем использовать<br/> На один перевод $1000<br/>В день 300 000₽, включая "отмененные" переводы</span></div>
+<h2>Комиссии</h2>
+<div class="text">Без комиссии</div>
+<div class="text">Для переводов может потребоваться ПИНФЛ</div>
+<div aria-label="Ссылки на магазины и сайт" class="icons-row" role="list"><a aria-label="Официальный сайт" class="icon-link" href="https://unired.uz/" rel="noopener" role="listitem" target="_blank"><img alt="" src="store icons/website.svg"/></a></div>
 <div class="links-row">
 <a href="https://t.me/CursoUz" rel="noopener" target="_blank">Телеграм-канал Curso</a>
 <a href="https://t.me/CursoExchangeRatesBot" rel="noopener" target="_blank">Телеграм-бот</a>
