--- a/index.html
+++ b/index.html
@@ -148,14 +148,10 @@
         <h1 class="title">Curso</h1>
         <p class="description">Находим лучшие курсы переводов в Узбекистан, Кыргызстан и Таджикистан</p>
         <div class="buttons icons-row">
-            <a href="https://apps.apple.com/app/apple-store/id6483440309?pt=122335609&amp;ct=tgchan&amp;mt=8"
-               target="_blank" class="app-button" aria-label="App Store">
-                <img src="images/app-store-button.svg" alt="Download on the App Store">
-            </a>
-            <a href="https://play.google.com/store/apps/details?id=com.danilzosim.curso"
-               target="_blank" class="app-button" aria-label="Google Play">
-            <img src="images/google-play-button.png" alt="Get it on Google Play">
-            </a>
+            <a href="https://t.me/CursoUz"
+               target="_blank" class="app-button" aria-label="Телеграм-канал">Телеграм-канал</a>
+            <a href="https://t.me/CursoExchangeRatesBot"
+               target="_blank" class="app-button" aria-label="Телеграм-бот">Телеграм-бот</a>
         </div>
     </div>
 </div>
